[5.0-RC.1 - 17.06.2024]
	* Allow any field from accounts table as donation column
	* Remove pagseguro & daopay & dotpay leftovers
	* Fix category_id
	* Fix add/edit title

[5.0-beta.2 - 14.12.2023]
	* Fix mount images

[5.0-beta - 30.11.2023]
	* Add Stripe payment method

[4.0 - 11.08.2023]
	* Fix premium time buying for tfs 1.4+ (premium_ends_at column)

[4.0-RC1 - 19.07.2023]
	* Add Most Popular Items
	* rewrite how images are parsed
	* (v0.9-alpha) fix gifts history not logged message

[4.0-beta2 - 29.06.2023]
	* Bump required MyAAC version to 0.8.9 (needs plugins/ folder in twig paths)
	* Fix for 0.9-alpha: cannot find gifts/history
	* Don't allow buying by deleted player
	* Max count of items increased to 65535

[4.0-beta - 06.06.2023]
	* Edit items
	* Move items (up, down)
	* Edit categories, reset categories
	* Fix colors in buy item page
	* Fix PACC image
	* Some other fixes

[3.1 - 25.03.2023]
	* move pages/payments into plugins/

[3.0.1 - 13.03.2023]
	* add gesior-shop-system-revscript.lua

[3.0 - 06.02.2022]
	* reorganise files, move most of them into plugins folder

[2.5 - 06.04.2022]
	* fix admin panel Gifts page not found (duplicated gifts.php)
	* fix typo

[2.4 - 22.04.2021]
	* remove some random debug message being popped, like: string(99) "<HERE ITEM IMAGE>"
	* fix PayPal sandbox URL + redirect after transaction
	* update cacert.pem from https://curl.se/ on install

[2.3 - 03.04.2021]
	* Fix problem with redirection after transaction has been made (PayPal redirect)
	* Do not override config.php after install - may upset some users ;)
	* Fix payment_type being ignored (Thanks to OtLand User: DukeeH)
	* (internal) Moving some SQL to schema.sql

[2.2.1 - 29.02.2020]
	* Force table links color to white (with !important css)

[2.2 - 02.12.2019]
	* Fix installation on some newest MySQL versions (slawkens)
	* Refactored code: (whiteblXK)
		* moved 'add offer' to admin panel
		* removed Homepay service
		* fixed delivering points in PagSeguro